[package]
name = "tls-decrypt-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["hex"]
guest = []

[dependencies]
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"] }
hex = { version = "0.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"