[package]
name = "common"
version = "0.2.0"
edition = "2021"

[features]
default = []
allocative = ["dep:allocative"]
std = [
  "allocative",
  "dep:ark-serialize",
  "serde/std",
  "syn/full",
]

[dependencies]
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e", optional = true }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
syn = { version = "2", optional = true }
